<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/beranda" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/beranda_event" />
        <item
            android:id="@+id/nav_kopdar"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/beranda_kopdar" />
        <item
            android:id="@+id/nav_galeri_kopdar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/beranda_galeri" />
        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/ic_card_membership_black_24dp"
            android:title="@string/beranda_list" />
        <item
            android:id="@+id/nav_struktur"
            android:icon="@drawable/ic_subject_black_24dp"
            android:title="@string/struktur" />
        <item
            android:id="@+id/nav_daftar"
            android:icon="@drawable/ic_border_color_black_24dp"
            android:title="@string/admin_daftar_member" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/updates" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/admin_about" />
    </group>

    <item android:title="@string/beranda_saran">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/beranda_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/beranda_masukan" />
            <item
                android:id="@+id/nav_login"
                android:title="@string/beranda_admin" />
        </menu>
    </item>

</menu>
